--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -151,7 +152,9 @@ dependencies {
 
 
 
-
+    // Validation
+    def ev_version = "1.0.1"
+    implementation "com.wajahatkarim3.easyvalidation:easyvalidation-core:$ev_version"
 
 
 
