--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    testImplementation 'com.google.truth:truth:1.1.2'
     // Required -- JUnit 4 framework
     testImplementation 'androidx.test:core-ktx:1.4.0'
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
