--- a/app/build.gradle
+++ b/app/build.gradle
@@ -147,10 +147,10 @@ dependencies {
     // Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:2.3.0"
 
-
+0
 
     // Timber for logs
-    implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 
 
 
@@ -162,6 +162,9 @@ dependencies {
 
     /// DataStore prefs
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
+
+    // Parsing
+    implementation 'com.google.code.gson:gson:2.8.8'
 
 
 
