--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,8 +105,11 @@ dependencies {
 
 
 
-    // Activity KTX for viewModels()
-    implementation "androidx.activity:activity-ktx:1.3.1"
+    // Activity Contracts
+
+
+//    implementation 'androidx.activity:activity-ktx:1.4.0-beta01'
+//    implementation 'androidx.fragment:fragment-ktx:1.4.0-alpha10'
 
 
 
