--- a/app/build.gradle
+++ b/app/build.gradle
@@ -141,6 +141,7 @@ dependencies {
 
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.1'
 
+    implementation "com.squareup.okhttp3:okhttp:4.9.1"
 
 
     // Room components
