--- a/app/build.gradle
+++ b/app/build.gradle
@@ -152,7 +152,7 @@ dependencies {
     // Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:2.3.0"
 
-0
+
 
     // Timber for logs
     implementation 'com.jakewharton.timber:timber:5.0.1'
@@ -174,5 +174,8 @@ dependencies {
     // Image Cropper Library
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
 
+
+    // Gson
+    implementation 'com.google.code.gson:gson:2.8.9'
 
 } //
