--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,9 @@ plugins {
     id 'kotlin-parcelize'
 
 
-    id 'androidx.navigation.safeargs.kotlin' // add classpath in the project level grid
+   // id 'androidx.navigation.safeargs.kotlin' // add classpath in the project level grid
     id'dagger.hilt.android.plugin'
+    id 'com.google.gms.google-services'
 
 }
 
@@ -76,6 +77,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.firebase:firebase-messaging:23.0.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
