--- a/app/build.gradle
+++ b/app/build.gradle
@@ -180,4 +180,8 @@ dependencies {
     // Gson
     implementation 'com.google.code.gson:gson:2.8.9'
 
+
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
+
 } //
