--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,9 @@
         android:requestLegacyExternalStorage="true"
         android:name=".base.BaseApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/fambazzarlogo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/fambazzarlogo"
         android:supportsRtl="true"
         android:theme="@style/Theme.FarmersEcom">
         <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity" />
