--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,9 @@
         android:requestLegacyExternalStorage="true"
         android:name=".base.BaseApplication"
         android:allowBackup="true"
-        android:icon="@drawable/fambazzarlogo"
+        android:icon="@drawable/applogo"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/fambazzarlogo"
+        android:roundIcon="@drawable/applogo"
         android:supportsRtl="true"
         android:theme="@style/Theme.FarmersEcom">
         <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity" />
@@ -50,6 +50,14 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/fambazzarlogo"/>
+
+        <meta-data android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@android:color/transparent" />
 
     </application>
 
